--- a/ch5_0.qmd
+++ b/ch5_0.qmd
@@ -2,11 +2,11 @@
 
 Les modèles *linéaires* sont les modèles les plus simples dans lesquels on raisonne en termes d'*entrées* et de *sorties*. Dans ces modèles, on dispose de variables $x_i$, dites *explicatives*, et de variables $y_i$, dites *à expliquer*, et l'on suppose qu'il existe une fonction inconnue $f$ telle que 
 $$y_i \approx f(x_i),$$
-et que l'on voudrait estimer. Les modèles linéaires consistent à suppose que $f$ est affine. Les modèles plus complexes, commes les réseaux de neurones, placent $f$ dans des classes plus riches. L'objectif de la méthode des moindres carrés est de trouver la meilleure approximation de $f$ possible dans la classe des fonctions affines. 
+et que l'on voudrait estimer. Les modèles linéaires consistent à supposer que $f$ est affine. Les modèles plus complexes, commes les réseaux de neurones, placent $f$ dans des classes plus riches. L'objectif de la méthode des moindres carrés est de trouver la meilleure approximation de $f$ possible dans la classe des fonctions affines. 
 
 ## Ajustement affine en une dimension. 
 
- On suppose qu'il existe entre les données $x_i$ et $y_i$ une relation de la forme $ y_i \approx \alpha + \beta x_i$
+ On suppose qu'il existe entre les données $x_i$ et $y_i$ une relation de la forme $y_i \approx \alpha + \beta x_i$
 où $\alpha, \beta$ sont deux nombres réels. Ici, $\approx$ signifie que la relation n'est pas parfaite : peut-être par exemple que les sorties sont bien égales à $\alpha+\beta x_i$, mais que les observations $y_i$ ont été polluées par du bruit ou des erreurs. Nous verrons cela plus tard. 
 
 Pour l'heure, nous voulons chercher les meilleurs $\alpha, \beta$ possibles. On calcule la distance entre le nuage de points $(x_i, y_i)$ et la droite d'équation $y = \alpha + \beta x$. Cette distance au carré est donnée par 
@@ -24,13 +24,13 @@ Le coefficient $\beta$ n'est rien d'autre que la covariance empirique des $x_i$ 
 L'inégalité de Cauchy-Schwartz dit que $\left|\overline{xy} - \bar{x}{\bar{y}}\right| \leqslant \tilde{\sigma}_x \tilde{\sigma}_y$, où l'on a noté
 $$\tilde{\sigma}_x^2 = \frac{1}{n}\sum_{i=1}^n x_i^2 - \left(\frac{1}{n}\sum_{i=1}^n x_i\right)^2$$
 l'estimateur naïf de la variance[^1]. L'inégalité n'est une égalité que si $x$ et $y$ sont effectivement colinéaires, c'est-à-dire si $y_i = \hat{\alpha} + x_i \hat{\beta}$ pour tous les $i$. La qualité de l'ajustement affine est donc bien mesurée par la quantité 
-$$ r^2 = \frac{\overline{xy}-\bar{x}\bar{x}}{\tilde{\sigma}_x \tilde{\sigma}_y}.$$
+$$ R^2 = \frac{\overline{xy}-\bar{x}\bar{x}}{\tilde{\sigma}_x \tilde{\sigma}_y}.$$
 
 
-## Moindres carrés généraux
+## Moindres carrés ordinaires
 
 
-Dans le cadre général, les variables explicatives ne sont pas de dimension 1 mais $d$. On notera $\bx = (x_1, \dotsc, x_d)$
+Dans le cadre général le nombre $d$ de variables explicatives est plus grand que 1. On notera $\bx = (x_1, \dotsc, x_d)$
 un élément de $\mathbb{R}^d$ ; les variables explicatives seront alors $\bx_1,\dotsc, \bx_n$. On cherchera des nombres $\theta_i$ tels que $y_i$ est aussi proche que possible de $$\theta_1 \bx_{i,1} + \dotsb + \theta_d \bx_{i,d} = \langle \bt, \bx_i\rangle = \bt^\top \bx_i. $$
 
 
@@ -38,7 +38,7 @@ un élément de $\mathbb{R}^d$ ; les variables explicatives seront alors $\bx_1
 **Remarque : où est passée la constante ?** *Dans l'équation ci-dessus, on a l'impression que le terme constant, qui correspondait à $\alpha$ dans l'exemple en dimension 1, a disparu. Ce n'est pas le cas : intégrer la constante au modèle revient à considérer que la variable constante égale à 1 fait partie des variables explicatives. En pratique, cela revient à poser, par exemple, $\bx_{i,1} = 1$ pour tout $i$. Ainsi, la constante correspondra toujours à $\theta_1$.* 
 
 
-On pose $X$ la matrice $n\times d$ dont la $i$-ème ligne est $\bx_i$.  La matrice dont les lignes sont composées des $\bt\top \bx_i$ n'est autre que la matrice $X\bt$. La distance entre le nuage de points $(X,Y)$ et la droite d'équation $Y = X\theta$ est alors $|Y - X\theta|$. On pourrait reproduire la méthode analytique ci-dessus pour trouver les paramètres optimaux, à savoir 
+On pose $X$ la matrice $n\times d$ dont la $i$-ème ligne est $\bx_i$ et $Y$ le vecteur colonne des $y_i$.  La matrice dont les lignes sont composées des $\bt\top \bx_i$ n'est autre que la matrice $X\bt$. La distance entre le nuage de points $(X,Y)$ et la droite d'équation $Y = X\theta$ est alors $|Y - X\theta|$. On pourrait reproduire la méthode analytique ci-dessus pour trouver les paramètres optimaux, à savoir 
 $$\hat{\bt} = \arg \min_{\theta} |Y - X\theta|^2. $${#eq-mcoargmin}
  Cependant, une interprétation géométrique simplifie la tâche : le $\hat{\bt}$ qui minimise @eq-mcoargmin est précisément celui qui garantit que $X\hat{\bt}$ est la projection orthogonale de $Y$ sur le sous-espace vectoriel $\mathscr{V}_X = \{X\theta : \theta \in \mathbb{R}^d\}$. 
 
@@ -61,7 +61,7 @@ La projection orthogonale sur le sous-espace vectoriel engendré par les colonne
 L'expression @eq-mco possède de nombreuses expressions alternatives. Parmi elles, on pourra noter que 
 $$\hat{\bt} = \bt + \left(\frac{1}{n}\sum_{i=1}^n \bx_i\bx_i^\top\right)^{-1}\frac{1}{n}\sum_{i=1}^n \bx_i \varepsilon_i. $${#eq-mco-alt}
 
-**Remarque générale.** Si, en dimension 1, on cherche à trouver le $\theta$ qui résout l'équation $y = x\theta$, on trouve évidemment $\theta = y/x$, c'est-à-dire qu'on *divise* $y$ par $x$, ou encore qu'on multiplie $y$ par l'inverse de $x$. En dimension supérieure, quand on veut résoudre en $\theta$ l'équation $Y = X\theta$, c'est pareil. Le problème, c'est qu'on ne sait pas forcément *inverser* $X$. La formule @eq-mco dit que même si $X$ n'est pas inversible, on peut quand même "diviser par $X$" : c'est pour cela que la matrice $(X^\top X)^{-1} X^\top$ est appelée *pseudo-inverse à gauche* de $X$ -- parfois associée au nom de Moore-Penrose. Multiplier $Y$ par $(X^\top X)^{-1}X^\top$ donne $(X^\top X)^{-1}X^\top Y = \hat{\bt}$ : ce vecteur ne vérifier par forcément $X{\hat{\bt}} = Y$, mais parmi tous les vecteurs possibles, c'est celui qui rend $X\bt$ le plus proche possible de $Y$.
+**Remarque générale.** Si, en dimension 1, on cherche à trouver le $\theta$ qui résout l'équation $y = x\theta$, on trouve évidemment $\theta = y/x$, c'est-à-dire qu'on *divise* $y$ par $x$, ou encore qu'on multiplie $y$ par l'inverse de $x$. En dimension supérieure, quand on veut résoudre en $\theta$ l'équation $Y = X\theta$, c'est pareil. Le problème, c'est qu'on ne sait pas forcément *inverser* $X$. La formule @eq-mco dit que même si $X$ n'est pas inversible, on peut quand même "diviser par $X$" : c'est pour cela que la matrice $(X^\top X)^{-1} X^\top$ est appelée *pseudo-inverse à gauche* de $X$ -- parfois associée au nom de Moore-Penrose. Multiplier $Y$ par $(X^\top X)^{-1}X^\top$ donne $(X^\top X)^{-1}X^\top Y = \hat{\bt}$ : ce vecteur ne vérifie par forcément $X{\hat{\bt}} = Y$, mais parmi tous les vecteurs possibles, c'est celui qui rend $X\bt$ le plus proche possible de $Y$.
 
 
 ## Résidus et $R^2$
